# nonogram

./: .gitignore  LICENSE  README.rst  pyproject.toml
nonogram/: exploration.ipynb  game.py  options.ipynb  scrapping.ipynb
tests/: test_nonogram.py
