[tool.poetry]
name = "nonogram"
version = "0.1.0"
description = "Creation et resolution du jeu Nonogram"
authors = ["Gabriel Watkinson <gabriel.watkinson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
notebook = "^6.4.0"
jupyterlab = "^3.0.16"
black = "^21.6b0"
isort = "^5.9.2"
pydocstyle = "^6.1.1"
pylint = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pydocstyle]
convention = "numpy"
